fix spacing

--- a/static/css/partials/navigation/_footer.scss
+++ b/static/css/partials/navigation/_footer.scss
@@ -5,7 +5,7 @@ footer {
 	justify-content: center;
 	width: 100%;
 	text-align: center;
-	padding: $p;
+	padding: $p*1.5;
 	div {
 		display: flex;
 		align-items: center;
@@ -34,6 +34,8 @@ footer {
 		}
 		&:focus {
 			text-decoration: underline;
+			-webkit-text-decoration-skip: edges;
+			text-decoration-style: wavy;
 		}
 		&:active {
 			transform: scale(0.9);
